--- a/verovio.html
+++ b/verovio.html
@@ -37,7 +37,7 @@
         }
         
         // A MusicXML file
-        var file = 'data/CorrectedScoreSonataCtrue.mei';
+        var file = 'data/CorrectedScoreSonataCtrue';
         // A MEI file
         //var file = 'https://www.verovio.org/editor/brahms.mei';
         
