--- a/verovio.html
+++ b/verovio.html
@@ -50,7 +50,7 @@ A third element to compare is the length of each individual file. The MEI file i
         }
         
         // A MusicXML file
-        var file = 'data/CorrectedScoreSonataCtrue';
+        var file = 'data/CorrectedScoreSonataCtrue (1).mei';
         // A MEI file
         //var file = 'https://www.verovio.org/editor/brahms.mei';
         
