--- a/verovio.html
+++ b/verovio.html
@@ -23,7 +23,8 @@
     </style>
 </head>
 <body>
-    <div class="header"><h1>Week 3</h1> </div>
+    
+    <h1>Week 3</h1> 
         
 
 One element which can be compared is how XML simply states the duration of a note with a single number. On the other hand, MEI uses PPQ or notes per quaver in order to measure durations. A duration of “4” is equal to that of a minum, as it has 4 quavers within it. 
