--- a/verovio.html
+++ b/verovio.html
@@ -51,7 +51,7 @@
         }
         
         // A MusicXML file
-        var file = 'data/SonatainCmajorLudwigAXML(WEEK3).mei';
+        var file = 'data/week3.mei';
         // A MEI file
         //var file = 'https://www.verovio.org/editor/brahms.mei';
         
